src/ariel-os-macros/tests/ui/task/missing_autostart_param_for_peripherals.stderr
error: custom attribute panicked
 --> tests/ui/task/missing_autostart_param_for_peripherals.rs:4:1
  |
4 | #[ariel_os::task(peripherals)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: the task must be `autostart` to receive peripherals
